[package]
name = "orbital-bus"
version = "0.1.0"
authors = ["Adrián Arroyo Calle <adrian.arroyocalle@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.46"
wasm-bindgen = "0.2.69"
hecs = "0.3.1"
instant = { version = "0.1", features = [ "wasm-bindgen" ] }
itertools = "0.10.0"
ron = "0.6.4"
serde = "1.0.123"
serde_with = "1.6.2"

[dependencies.web-sys]
version = "0.3.46"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'HtmlImageElement',
  'Window',
  'EventTarget',
  'Event',
  'KeyboardEvent',
  'Storage',
  'Location',
  'DomRect',
  'MouseEvent',
  'console',
  'TouchEvent',
  'TouchList',
  'Touch'
]

[profile.release.package.'*']
opt-level = 3
